--- a/docs/app.css
+++ b/docs/app.css
@@ -1316,7 +1316,8 @@ a {
   color: black;
   background-color: #04FF00;
 }
-btn-primary {
+btn-primary,
+.btn-primary {
   color: var(--fore-color-primary) !important;
   background-color: var(--bg-color-primary) !important;
   border-radius: 8px;
