--- a/front/src/css/w3.css
+++ b/front/src/css/w3.css
@@ -199,8 +199,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .color-success{color: black; background-color: #04FF00;}
 
 btn-primary, .btn-primary{
-    color: var(--fore-color-primary)!important;
-    background-color: var(--bg-color-primary)!important;
+    color: var(--fore-color-primary);
+    background-color: var(--bg-color-primary);
     border-radius: 8px;
     border:none;
     display:inline-block;
@@ -216,5 +216,21 @@ btn-primary:hover{box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,
 btn-primary{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}   
 btn-primary:disabled{cursor:not-allowed;opacity:0.3}
 btn-primary.w3-disabled:hover,btn-primary:disabled:hover{box-shadow:none}
+
+btn-danger, .btn-danger{
+    color: var(--fore-color-primary);
+    background-color: red;
+    border-radius: 8px;
+    border:none;
+    display:inline-block;
+    padding:8px 16px;
+    vertical-align:middle;
+    overflow:hidden;
+    text-decoration:none;
+    text-align:center;
+    cursor:pointer;
+    white-space:nowrap
+}
+
 
 .w3-half-centered{margin:auto;max-width: 500px;}
